--- a/roating.html
+++ b/roating.html
@@ -10,5 +10,11 @@
     <span class="rword">I love you</span>
     <span class="rword">stay hungry, stay foolish!</span>
     <script type="text/javascript" src="rt.js"></script>
+    <script>
+        var rtext = new Rotating({
+            className: 'rword',
+            time: 6000
+        });
+    </script>
 </body>
 </html>
